# create-rust-app

create-rust-app/: Cargo.toml
create-rust-app/src/auth/: controller.rs
create-rust-app/src/storage/: attachment.rs
create-rust-app/src/storage/schema/: postgres.rs  sqlite.rs
create-rust-app_cli/: Cargo.toml
create-rust-app_cli/qsync/: Cargo.toml
create-rust-app_cli/template-plugin-storage/backend/services/: file.rs+actix_web
