[package]
name = "qsync"
version = "1.0.1"
edition = "2021"
description = "Generate react-query hooks for your rust backend (see https://github.com/Wulf/create-rust-app)"
license = "MIT OR Apache-2.0"

[dependencies]
Inflector = "0.11.4"
regex = "1.10"
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
walkdir = "2.5"
qsync-macro = { version = "0.1.0" }
darling = "0.20.10"
proc-macro2 = "1"

[lib]
name = "qsync"
path = "src/lib.rs"
